--- a/src/stylesheet/root.scss
+++ b/src/stylesheet/root.scss
@@ -2,6 +2,7 @@
   /*font families*/
   --font-roboto:  'Roboto', sans-serif;
   --font-manrope:  'Manrope', sans-serif;
+  --default-transition: all .2s ease;
 
   /*Colors*/
   --white:#fff;
